# learning-django-tenancy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/core/: models.py  urls.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/core/: profile.html  register.html
apps/tasks/: models.py  urls.py  views.py
apps/tasks/templates/: base.html  project_list.html
backend/: .env_sample  check_schemas.py  docker-compose.yml  requirements.txt
backend/apps/core/: README_API.md  admin.py  api.py  api_examples.md  forms.py  jwt_utils.py  middleware.py  models.py  test_api.py  urls.py  utils.py  views.py
backend/apps/core/migrations/: 0002_user_tenant.py
backend/apps/core/templates/core/: login.html
backend/apps/tasks/: api.py  forms.py  models.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_project.py  0003_project_is_completed.py
backend/apps/tasks/templates/: base.html  project_create.html
backend/project/: apis.py  settings.py  urls.py
frontend/django-tenancy/: README_API_INTEGRATION.md  index.html  package-lock.json  package.json
frontend/django-tenancy/src/: App.example.tsx  App.tsx
frontend/django-tenancy/src/components/: Header.tsx  ProtectedRoute.tsx
frontend/django-tenancy/src/hooks/: useAuth.ts
frontend/django-tenancy/src/pages/: CreateUser.tsx  Home.tsx  Login.tsx  Profile.tsx  ProjectCreate.tsx  ProjectList.tsx  Register.tsx
frontend/django-tenancy/src/types/: index.ts
frontend/django-tenancy/src/utils/: api.ts  projectsApi.ts
project/: settings.py  urls.py
