[project]
name = "django-tenancy"
version = "0.1.0"
description = "Django tenancy project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.11",
    "django-debug-toolbar>=6.0.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1.1",
    "psycopg2-binary>=2.9.10",
]